--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "firebase": "^9.8.1",
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.0.13",
     "uniqid": "^5.4.0",
