--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat",
+  "name": "chat-app",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,19 +7,14 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
-    "firebase": "^9.8.1",
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.0.13",
-    "uniqid": "^5.4.0",
+    "sass": "^1.52.1",
     "vue": "^3.2.33",
-    "vue-router": "^4.0.14",
-    "vue3-perfect-scrollbar": "^1.6.0",
-    "vue3-smooth-scroll": "^0.8.1"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
-    "sass": "^1.51.0",
-    "vite": "^2.9.5",
-    "vite-plugin-pages": "^0.23.0"
+    "vite": "^2.9.5"
   }
 }
