--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "firebase": "^9.8.1",
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.0.13",
     "sass": "^1.52.1",
+    "uniqid": "^5.4.0",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
