--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "uniqid": "^5.4.0",
     "unique-objects": "^1.0.5",
     "vue": "^3.2.33",
-    "vue-router": "^4.0.14"
+    "vue-displacement-slideshow": "^4.0.0",
+    "vue-router": "^4.0.14",
+    "vue3-carousel": "^0.1.40"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
