--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "cloudinary": "^1.30.0",
+    "dotenv": "^16.0.1",
     "firebase": "^9.8.1",
     "moment": "^2.29.3",
     "oh-vue-icons": "^1.0.0-rc3",
