move authStatechange to appProvider, fix rerender when click page friends, add feature send image, add feature preview image(bug), add feature send notification, add feature gui lo moi ket ban, fix bug

--- a/src/emulators/firebase.json
+++ b/src/emulators/firebase.json
@@ -19,5 +19,8 @@
   },
   "storage": {
     "rules": "storage.rules"
-  }
+  },
+  "rewrites": [
+    { "source": "/api/myFunction", "function": "doStuff" }
+]
 }
