--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@nguyenvanlong/vue3-chat-emoji": "^0.1.1",
+    "@vueuse/head": "^0.7.6",
     "firebase": "^9.8.1",
     "moment": "^2.29.3",
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.0.13",
     "sass": "^1.52.1",
     "sort-objects-array": "^1.7.1",
+    "string-hash": "^1.1.3",
     "uniqid": "^5.4.0",
     "unique-objects": "^1.0.5",
     "uuid": "^8.3.2",
